# computer-vision-pet

./: .gitignore  README.md  pyproject.toml
data/: Автотрафик_crossings.csv  Автотрафик_plates.csv
notebooks/: main_notebook.ipynb
