[tool.poetry]
name = "computer-vision-pet"
version = "0.1.0"
description = ""
authors = ["albe <aleksey.bereznikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.13"
ultralytics = "^8.3.195"
opencv-python = "^4.12.0.88"
numpy = "2.2.0"
pillow = "^11.3.0"
filterpy = "^1.4.5"
lapx = "^0.5.12"
scipy = "^1.16.1"
easyocr = "^1.7.2"
pandas = "^2.3.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.30.1"
matplotlib = "^3.10.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
